[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/particles/Fireball.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/particles/Fireball2.gd" type="Script" id=2]

[node name="Fireball2" type="Node2D"]
script = ExtResource( 2 )

[node name="Fireball" parent="." instance=ExtResource( 1 )]

[node name="Fireball2" parent="." instance=ExtResource( 1 )]

[node name="Fireball3" parent="." instance=ExtResource( 1 )]

[node name="Fireball4" parent="." instance=ExtResource( 1 )]

[node name="Fireball5" parent="." instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
